--- a/BillApp/Cells/BillTableViewCell.xib
+++ b/BillApp/Cells/BillTableViewCell.xib
@@ -74,6 +74,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="amountLabel" destination="zw2-Ah-Bk5" id="z5u-ur-AK4"/>
+                <outlet property="categoryLabel" destination="6TK-yb-gCU" id="GJp-0x-p5m"/>
                 <outlet property="dateLabel" destination="tNK-F0-YzL" id="aYz-G5-dlJ"/>
             </connections>
             <point key="canvasLocation" x="89" y="91"/>
