--- a/BillApp/Base.lproj/Main.storyboard
+++ b/BillApp/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="2Bu-Q8-MYz">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="KGu-90-OGS">
+                        <barButtonItem key="leftBarButtonItem" id="KGu-90-OGS">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="vvD-o7-PUs" propertyAccessControl="none">
                                 <rect key="frame" x="16" y="0.0" width="125" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -110,6 +110,7 @@
                                             <constraint firstAttribute="trailing" secondItem="LKg-JN-Qd6" secondAttribute="trailing" constant="8" id="1sr-jw-byx"/>
                                             <constraint firstAttribute="bottom" secondItem="A2o-M2-cpa" secondAttribute="bottom" constant="12" id="Fjj-2r-QUb"/>
                                             <constraint firstItem="A2o-M2-cpa" firstAttribute="top" secondItem="cus-8c-29i" secondAttribute="top" constant="12" id="WrS-XV-tKf"/>
+                                            <constraint firstItem="LKg-JN-Qd6" firstAttribute="leading" secondItem="A2o-M2-cpa" secondAttribute="trailing" constant="171" id="e7r-Uy-Dzh"/>
                                             <constraint firstItem="A2o-M2-cpa" firstAttribute="leading" secondItem="cus-8c-29i" secondAttribute="leading" constant="16" id="egt-we-Zaj"/>
                                             <constraint firstItem="LKg-JN-Qd6" firstAttribute="centerY" secondItem="A2o-M2-cpa" secondAttribute="centerY" id="ljs-4c-CWU"/>
                                         </constraints>
@@ -135,6 +136,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="FQg-D1-yAp" firstAttribute="leading" secondItem="hUw-Y5-ISj" secondAttribute="trailing" constant="159.5" id="8uP-C3-fqM"/>
                                             <constraint firstAttribute="trailing" secondItem="FQg-D1-yAp" secondAttribute="trailing" constant="8" id="QuC-9f-lNF"/>
                                             <constraint firstItem="hUw-Y5-ISj" firstAttribute="top" secondItem="R8J-cK-ap2" secondAttribute="top" constant="12" id="acU-NQ-ctY"/>
                                             <constraint firstAttribute="bottom" secondItem="hUw-Y5-ISj" secondAttribute="bottom" constant="12" id="mpa-59-HmX"/>
@@ -162,6 +164,7 @@
                                             <constraint firstItem="TLR-hE-i8z" firstAttribute="centerY" secondItem="d1p-bF-Oa5" secondAttribute="centerY" id="O92-yL-X2R"/>
                                             <constraint firstAttribute="trailing" secondItem="TLR-hE-i8z" secondAttribute="trailing" constant="16" id="aUt-Aq-BRu"/>
                                             <constraint firstAttribute="bottom" secondItem="XvG-Vg-a1h" secondAttribute="bottom" constant="12" id="tRy-GX-aY4"/>
+                                            <constraint firstItem="TLR-hE-i8z" firstAttribute="leading" secondItem="XvG-Vg-a1h" secondAttribute="trailing" constant="230.5" id="vIs-NA-HEt"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kMn-Hb-RjK">
@@ -187,6 +190,7 @@
                                         <constraints>
                                             <constraint firstItem="cMM-f4-ncc" firstAttribute="centerY" secondItem="88X-EN-Yhb" secondAttribute="centerY" id="Bgp-fY-rdz"/>
                                             <constraint firstItem="88X-EN-Yhb" firstAttribute="leading" secondItem="kMn-Hb-RjK" secondAttribute="leading" constant="16" id="PAG-3k-aRp"/>
+                                            <constraint firstItem="cMM-f4-ncc" firstAttribute="leading" secondItem="88X-EN-Yhb" secondAttribute="trailing" constant="160.5" id="TKT-mB-WRH"/>
                                             <constraint firstItem="88X-EN-Yhb" firstAttribute="top" secondItem="kMn-Hb-RjK" secondAttribute="top" constant="12" id="X6m-9g-rTC"/>
                                             <constraint firstAttribute="trailing" secondItem="cMM-f4-ncc" secondAttribute="trailing" constant="8" id="XVI-mT-nTg"/>
                                             <constraint firstAttribute="bottom" secondItem="88X-EN-Yhb" secondAttribute="bottom" constant="12" id="v8P-kF-hK9"/>
@@ -216,6 +220,7 @@
                                             <constraint firstItem="h9A-O6-8Z8" firstAttribute="leading" secondItem="FnG-64-QDF" secondAttribute="leading" constant="16" id="0SK-97-40D"/>
                                             <constraint firstItem="h9A-O6-8Z8" firstAttribute="top" secondItem="FnG-64-QDF" secondAttribute="top" constant="12" id="RUa-YC-S3F"/>
                                             <constraint firstAttribute="trailing" secondItem="ZBx-bL-MHg" secondAttribute="trailing" constant="8" id="nRr-hE-44C"/>
+                                            <constraint firstItem="ZBx-bL-MHg" firstAttribute="leading" secondItem="h9A-O6-8Z8" secondAttribute="trailing" constant="177" id="ngG-SM-Jta"/>
                                             <constraint firstItem="ZBx-bL-MHg" firstAttribute="centerY" secondItem="h9A-O6-8Z8" secondAttribute="centerY" id="pev-No-dD4"/>
                                             <constraint firstAttribute="bottom" secondItem="h9A-O6-8Z8" secondAttribute="bottom" constant="12" id="uO8-tU-pT5"/>
                                         </constraints>
@@ -225,12 +230,6 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Picture" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxH-Xc-fRl">
                                                 <rect key="frame" x="16" y="12" width="81" height="76"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jR-Sc-X8B">
-                                                <rect key="frame" x="359" y="12" width="0.0" height="76"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -245,12 +244,10 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="3jR-Sc-X8B" secondAttribute="trailing" constant="16" id="Zj0-Yf-Gxu"/>
                                             <constraint firstItem="fMT-0R-VBq" firstAttribute="centerY" secondItem="SdZ-Sg-Mz2" secondAttribute="centerY" id="dwU-sy-Ecw"/>
                                             <constraint firstItem="vxH-Xc-fRl" firstAttribute="top" secondItem="SdZ-Sg-Mz2" secondAttribute="top" constant="12" id="emw-oF-f68"/>
                                             <constraint firstItem="vxH-Xc-fRl" firstAttribute="leading" secondItem="SdZ-Sg-Mz2" secondAttribute="leading" constant="16" id="epQ-bS-TRI"/>
-                                            <constraint firstAttribute="bottom" secondItem="3jR-Sc-X8B" secondAttribute="bottom" constant="12" id="kkm-Vu-iAK"/>
-                                            <constraint firstItem="3jR-Sc-X8B" firstAttribute="top" secondItem="SdZ-Sg-Mz2" secondAttribute="top" constant="12" id="pEB-m5-bjt"/>
+                                            <constraint firstItem="fMT-0R-VBq" firstAttribute="leading" secondItem="vxH-Xc-fRl" secondAttribute="trailing" constant="230" id="sF0-tn-esA"/>
                                             <constraint firstAttribute="trailing" secondItem="fMT-0R-VBq" secondAttribute="trailing" constant="16" id="vgd-O6-sjF"/>
                                             <constraint firstAttribute="bottom" secondItem="vxH-Xc-fRl" secondAttribute="bottom" constant="12" id="w2k-hO-whG"/>
                                         </constraints>
@@ -281,7 +278,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1YU-CZ-i0t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2354" y="30"/>
+            <point key="canvasLocation" x="2352.8000000000002" y="29.23538230884558"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BBX-Ep-8Ka">
@@ -460,6 +457,6 @@
         <image name="Camera" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5KJ-9u-1Rr"/>
+        <segue reference="qF0-v9-UKl"/>
     </inferredMetricsTieBreakers>
 </document>
