--- a/BillApp/Base.lproj/LaunchScreen.storyboard
+++ b/BillApp/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,11 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iTunesArtwork" highlightedImage="iTunesArtwork" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R3C-V4-C45">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork" highlightedImage="iTunesArtwork" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R3C-V4-C45">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="R3C-V4-C45" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="WF1-Gz-BPq"/>
+                            <constraint firstItem="R3C-V4-C45" firstAttribute="trailing" secondItem="1fg-MF-OKq" secondAttribute="trailing" id="Xsp-6K-Kjf"/>
+                            <constraint firstItem="R3C-V4-C45" firstAttribute="bottom" secondItem="1fg-MF-OKq" secondAttribute="bottom" id="p9s-ah-bte"/>
+                            <constraint firstItem="R3C-V4-C45" firstAttribute="leading" secondItem="1fg-MF-OKq" secondAttribute="leading" id="r4Z-R3-2UN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1fg-MF-OKq"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
