--- a/BillApp/Cells/BillTableViewCell.xib
+++ b/BillApp/Cells/BillTableViewCell.xib
@@ -61,6 +61,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IQL-dl-91j"/>
                     </view>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r1v-PF-7OB">
+                        <rect key="frame" x="235" y="31" width="79" height="61"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <state key="normal" title="Button" image="image.png"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="mtk-5p-tqg" secondAttribute="bottom" constant="16" id="209-Mt-ZuV"/>
@@ -77,11 +82,13 @@
                 <outlet property="amountLabel" destination="zw2-Ah-Bk5" id="z5u-ur-AK4"/>
                 <outlet property="categoryLabel" destination="6TK-yb-gCU" id="GJp-0x-p5m"/>
                 <outlet property="dateLabel" destination="tNK-F0-YzL" id="aYz-G5-dlJ"/>
+                <outlet property="paidButton" destination="r1v-PF-7OB" id="Lky-j8-xq1"/>
             </connections>
             <point key="canvasLocation" x="89" y="91"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Camera" width="50" height="50"/>
+        <image name="image.png" width="639" height="474"/>
     </resources>
 </document>
